@@ -15,6 +15,11 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 5.1
 -----------------
 
+11/5/15
+    - Use voltage dependent loads in both base and target injections
+      to define continuation power flow transfer. Should fix issue with
+      calculation of final loads.
+
 10/30/15
     - Fixed a bug in cpf_default_callback() introduced with the
       experimental updates regarding ZIP loads on 4/14/15.
